--- a/.github/workflows/build-N-test-v3-Dev.yml
+++ b/.github/workflows/build-N-test-v3-Dev.yml
@@ -147,6 +147,9 @@ jobs:
       MAKEFLAGS: "--jobs=3 QUICK_BUILD=1"
     container: ${{ matrix.container_image }}
     steps:
+      - name: DEBBUG IF
+        run: |
+          echo ${{ github.ref }}
       - uses: actions/checkout@v3
       - name: Build System Info
         if: ${{ matrix.os=='unix' }}
