tweaked Windows-MSYS/Dockerfile paths so now all builds except openssl (fixes issue with missing sdk in config file - but still could celanup more/better paths)

--- a/DockerBuildContainers/Windows-MSYS/Dockerfile
+++ b/DockerBuildContainers/Windows-MSYS/Dockerfile
@@ -76,7 +76,13 @@ RUN [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tl
 ## Complete MSYS install, once the basic (core components of) MSYS are installed one way or another
 
 # Setup path to include msys tools (and mingw dir for jq)
-ENV  PATH="%PATH%;${MSYS_DIR}\usr\bin;${MSYS_DIR}\mingw64\bin"
+# ENV PATH="${PATH};${MSYS_ASDOS_DIR}\usr\bin;${MSYS_ASDOS_DIR}\mingw64\bin"
+
+# Add cygwin to the path
+SHELL ["powershell"]
+RUN  \
+    $env:PATH =  $env:PATH + ';C:\msys64\usr\bin;C:\msys64\mingw64\bin'; \
+    [Environment]::SetEnvironmentVariable('PATH', $env:PATH, [EnvironmentVariableTarget]::Machine);
 
 # Install a bunch of components - mostly that Stroika builds will find handy
 SHELL ["cmd", "/S", "/C"]
