cleanup recent workflow chekcins

--- a/.github/workflows/build-N-test-v3.yml
+++ b/.github/workflows/build-N-test-v3.yml
@@ -35,7 +35,7 @@ jobs:
             . | select((.run_on_branch==$branchName) or (.run_on_branch=="always")) | select(.build_job=="Linux")
         )' .github/workflows/build-N-test-Matrix.json)                
         echo "matrix={\"include\":$(echo $matrix)}" >> $GITHUB_OUTPUT
-  build-n-test:
+  build-n-test-Linux:
     needs: matrix_prep
     runs-on: ${{ matrix.runs_on }}
     strategy:
