--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -1,19 +1,19 @@
 #
 # Docs on github action files: https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions
 #
-# build-N-test-v3
+# build-N-test
 #
 
-name: build-N-test-v3
+name: build-N-test
 
 on:
   push:
   workflow_dispatch:
     inputs:
-      ignored:
-        description: "ignored"
+      run_all:
+        description: "run all"
         required: false
-        default: ""
+        default: "true"
 
 ## NB: JOBS section IDENTICAL between v3-Dev and 3-Release files EXCEPT that on v3-Dev file
 ## comment out all entries marked with includeInDevBranchBuilds: false
@@ -24,7 +24,7 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - id: set-matrix
       run: |
         branchName=$(echo '${{ github.ref }}' | sed 's,refs/heads/,,g')  
@@ -38,7 +38,7 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - id: set-matrix
       run: |
         branchName=$(echo '${{ github.ref }}' | sed 's,refs/heads/,,g')  
@@ -52,7 +52,7 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - id: set-matrix
       run: |
         branchName=$(echo '${{ github.ref }}' | sed 's,refs/heads/,,g')  
@@ -60,6 +60,7 @@ jobs:
             . | select((.run_on_branch==$branchName) or (.run_on_branch=="always")) | select(.build_job=="Windows")
         )' .github/workflows/build-N-test-Matrix.json)                
         echo "matrix={\"include\":$(echo $matrix)}" >> $GITHUB_OUTPUT
+
   build-n-test-Linux:
     needs: LinuxMatrixPrep
     runs-on: ${{ matrix.runs_on }}
@@ -296,7 +297,6 @@ jobs:
       actions: read
       contents: read
       security-events: write
-
     strategy:
       fail-fast: false
       matrix:
@@ -304,32 +304,26 @@ jobs:
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python' ]
         # Learn more:
         # https://docs.github.com/en/free-pro-team@latest/github/finding-security-vulnerabilities-and-errors-in-your-code/configuring-code-scanning#changing-the-languages-that-are-analyzed
-
     env:
       # QUICK_BUILD avoids some internal testing
       MAKEFLAGS: "--jobs=3 QUICK_BUILD=1"
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-
     - name: Install tools required to build Stroika
       run: |
         sudo apt-get install -y libtool-bin pkg-config cmake automake autoconf libtool-bin libasan5 libubsan1
         sudo apt-get install -y g++-11
-
     - name: Configure
       run: |
         ./configure Release --compiler-driver g++-11 --apply-default-release-flags --lto disable
         cat ConfigurationFiles/Release.xml
-
     # Break out third-party-components to do clean so we dont run out of disk space, and break out TPC AND library
     # to show the summary time for each part
     - name: Make third-party-components
       run: |
         make third-party-components
         make clean
-
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
@@ -339,9 +333,7 @@ jobs:
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
         # queries: ./path/to/local/query, your-org/your-repo/queries@main
-
     - name: Make Stroika
       run: make all
-
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
