--- a/DockerBuildContainers/Ubuntu2204-RegressionTests/Dockerfile
+++ b/DockerBuildContainers/Ubuntu2204-RegressionTests/Dockerfile
@@ -21,7 +21,8 @@ RUN apt-get -qq install -y clang++-10
 RUN apt-get -qq install -y clang++-11
 RUN apt-get -qq install -y clang++-12
 RUN apt-get -qq install -y clang++-13
-RUN apt-get -qq install -y clang++-14 && apt-get install -y libc++-14-dev libc++abi-14-dev
+RUN apt-get -qq install -y clang++-14
+RUN apt-get -qq install -y clang++-15 && apt-get install -y libc++-15-dev libc++abi-15-dev
 
 # For some reason not installed on ubuntu 21.04, nor 22.04 otherwise
 RUN apt-get -qq install -y libz.a
