fixed makefile typo

--- a/DockerBuildContainers/Makefile
+++ b/DockerBuildContainers/Makefile
@@ -64,7 +64,7 @@ export DOCKER_TAG_LINE_=\
 	docker tag sophistsolutionsinc/$${DO_TO_IMAGE_} sophistsolutionsinc/$${DO_TO_IMAGE_}:v3;
 
 ifeq ($(STROIKA_VERSION_Final),true)
-DOCKER_TAG_LINE_+=
+DOCKER_TAG_LINE_+= \
 	echo docker tag sophistsolutionsinc/$${DO_TO_IMAGE_} sophistsolutionsinc/$${DO_TO_IMAGE_}:$(STROIKA_VERSION); \
 	docker tag sophistsolutionsinc/$${DO_TO_IMAGE_} sophistsolutionsinc/$${DO_TO_IMAGE_}:$(STROIKA_VERSION);
 endif
