--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -311,7 +311,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Install tools required to build Stroika
       run: |
-        sudo apt-get install -y libtool-bin pkg-config cmake automake autoconf libtool-bin libasan5 libubsan1
+        sudo apt-get install -y libtool-bin pkg-config cmake automake autoconf libtool-bin
         sudo apt-get install -y g++-11
     - name: Configure
       run: |
