--- a/ThirdPartyComponents/openssl/Makefile
+++ b/ThirdPartyComponents/openssl/Makefile
@@ -23,7 +23,8 @@ QUICK_BUILD ?= 1
 #
 # CHECK FOR UPDATED VERSIONS https://www.openssl.org/source/
 #
-VERSION=3.1.0
+VERSION=3.1.1
+#VERSION=3.1.0
 #VERSION=3.0.8
 #VERSION=3.0.7
 #VERSION=3.0.5
