EXPERIMENTAL switch to stroika v3ish build of docker containers (INCOMPLETE)

--- a/DockerBuildContainers/Windows-MSYS-VS2k19/Dockerfile
+++ b/DockerBuildContainers/Windows-MSYS-VS2k19/Dockerfile
@@ -74,39 +74,55 @@ RUN %TEMP%\vs_buildtools.exe \
 
 
 # Install MSYS
-SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
+ARG MSYS_DIR=c:/msys64/
+ARG MSYS_ASDOS_DIR=c:\msys64
 ARG MSYS_LatestRelease=https://github.com/msys2/msys2-installer/releases/download/nightly-x86_64/msys2-base-x86_64-latest.sfx.exe
 ARG MSYS_20220118=https://github.com/msys2/msys2-installer/releases/download/2022-01-18/msys2-base-x86_64-20220118.sfx.exe
 ARG MSYS_20220904=https://github.com/msys2/msys2-installer/releases/download/2022-09-04/msys2-base-x86_64-20220904.sfx.exe
 ARG MSYS_20230127=https://github.com/msys2/msys2-installer/releases/download/2023-01-27/msys2-base-x86_64-20230127.sfx.exe
+SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 RUN [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12; \
   Invoke-WebRequest -UseBasicParsing -uri "$env:MSYS_20230127" -OutFile msys2.exe; \
   .\msys2.exe -y -oC:\; \
-  Remove-Item msys2.exe ; \
+  Remove-Item msys2.exe ;\
   function msys() { C:\msys64\usr\bin\bash.exe @('-lc') + @Args; } \
   msys ' '; \
   msys 'pacman --noconfirm -Syuu'; \
   msys 'pacman --noconfirm -Syuu'; \
-  msys 'pacman --noconfirm -S base-devel git unzip p7zip doxygen mingw-w64-x86_64-jq'; \
-  msys 'pacman --noconfirm -Scc';
-# doxygen for generating docs - optional
-# gdb for debugging - optional
+  cmd /c del /f /s /q 'C:\$Recycle.Bin'
+#### </MYS_INSTALLER>
 
 
-# Set PATH variable (to include MSYS, and its mingw64 directory - for jq)
+## Complete MSYS install, once the basic (core components of) MSYS are installed one way or another
+
+# Add MSYS bin directory to the path
+
+# Setup path to include msys tools (and mingw dir for jq)
+# ENV PATH="${PATH};${MSYS_ASDOS_DIR}\usr\bin;${MSYS_ASDOS_DIR}\mingw64\bin"
+
 SHELL ["powershell"]
 RUN  \
-    $env:PATH =  $env:PATH + ';c:\msys64\usr\bin;c:\msys64\mingw64\bin;';   \
+    $env:PATH =  $env:PATH + ';C:\msys64\usr\bin;C:\msys64\mingw64\bin'; \
     [Environment]::SetEnvironmentVariable('PATH', $env:PATH, [EnvironmentVariableTarget]::Machine);
 
+# Install a bunch of components - mostly that Stroika builds will find handy
+SHELL ["cmd", "/S", "/C"]
+RUN \
+    pacman --noconfirm -S base-devel git unzip p7zip doxygen mingw-w64-x86_64-jq && \
+    pacman --noconfirm -Syuu
 
-COPY Windows-MSYS-VS2k19/Getting-Started-With-Stroika.md c:/msys64/
-COPY Windows-MSYS-VS2k19/.bash_profile c:/msys64/
+COPY Windows-MSYS-VS2k19/Getting-Started-With-Stroika.md $MSYS_DIR
+COPY Windows-MSYS-VS2k19/.bash_profile $MSYS_DIR
 
+# Note, tried using ENTRYPOINT, but this doesn't seem to work reasonably with docker, 
+# and much worse with windows (in part due to available shell commands)
+# CMD ["cmd", "/c", "call FixupPath.bat && echo see Getting-Started-With-Stroika.md && cmd"]
+CMD ["bash.exe", "--login"]
+
+## @todo - NOT SURE A GOOD IDEA - EXPLAIN WHY WE CARE - think had todo with runnning -exec and coming up in a reasonable spot? And maybe
+## home dir??? soemthign quirly with bashrc default scripts on startup - dont remember
 # MSYS defaults to ignorning the inherited path - see https://www.msys2.org/wiki/MSYS2-introduction/
 ENV MSYS2_PATH_TYPE=inherit
-
-CMD ["bash.exe", "--login"]
 
 # ### NOTE TO RUN
 # ###     docker run -v c:\Sandbox:c:\Sandbox -it sophistsolutionsinc/stroika-buildvm-windows-msys-vs2k19
